--- a/src/BinaryMapper.Core/BinaryMapper.Core.csproj
+++ b/src/BinaryMapper.Core/BinaryMapper.Core.csproj
@@ -2,7 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.1</Version>
+    <Version>0.2</Version>
+    
+    <Description>Provides types to read binary streams into C# structures.</Description>
+    <Authors>alanedwardes</Authors>
+    <PackageTags>parsing;structures;binary;reading;formats</PackageTags>
+    <PackageProjectUrl>https://github.com/alanedwardes/BinaryMapper</PackageProjectUrl>
   </PropertyGroup>
 
 </Project>
