--- a/src/BinaryMapper.Minidump/BinaryMapper.Minidump.csproj
+++ b/src/BinaryMapper.Minidump/BinaryMapper.Minidump.csproj
@@ -2,7 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.1</Version>
+    <Version>0.2</Version>
+    
+    <Description>Provides types to read Windows minidumps into C# structures. Defines MINIDUMP_HEADER and other types from the Windows API.</Description>
+    <Authors>alanedwardes</Authors>
+    <PackageTags>parsing;minidump;binary;reading;memorydump;debugging</PackageTags>
+    <PackageProjectUrl>https://github.com/alanedwardes/BinaryMapper</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
