--- a/misc/BinaryMapper.Tester/BinaryMapper.Tester.csproj
+++ b/misc/BinaryMapper.Tester/BinaryMapper.Tester.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\BinaryMapper.Minidump\BinaryMapper.Minidump.csproj" />
+    <ProjectReference Include="..\..\src\BinaryMapper.Windows.Minidump\BinaryMapper.Windows.Minidump.csproj" />
   </ItemGroup>
 
 </Project>
