--- a/src/BinaryMapper.Windows.Executable/BinaryMapper.Windows.Executable.csproj
+++ b/src/BinaryMapper.Windows.Executable/BinaryMapper.Windows.Executable.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Version>0.3</Version>
     
-    <Description>Provides types to read Windows minidumps into C# structures. Defines MINIDUMP_HEADER and other types from the Windows API.</Description>
+    <Description>Provides types to read Windows executables into C# structures.</Description>
     <Authors>alanedwardes</Authors>
     <PackageTags>parsing;minidump;binary;reading;memorydump;debugging</PackageTags>
     <PackageProjectUrl>https://github.com/alanedwardes/BinaryMapper</PackageProjectUrl>
