--- a/src/BinaryMapper.Core/BinaryMapper.Core.csproj
+++ b/src/BinaryMapper.Core/BinaryMapper.Core.csproj
@@ -2,12 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.3</Version>
+    <Version>0.3.1</Version>
     
     <Description>Provides types to read binary streams into C# structures.</Description>
     <Authors>alanedwardes</Authors>
     <PackageTags>parsing;structures;binary;reading;formats</PackageTags>
+    <PackageIconUrl>https://raw.githubusercontent.com/alanedwardes/BinaryMapper/master/logo.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/alanedwardes/BinaryMapper</PackageProjectUrl>
   </PropertyGroup>
-
 </Project>
