--- a/src/BinaryMapper.Windows.Executable/BinaryMapper.Windows.Executable.csproj
+++ b/src/BinaryMapper.Windows.Executable/BinaryMapper.Windows.Executable.csproj
@@ -2,11 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.3</Version>
+    <Version>0.3.1</Version>
     
     <Description>Provides types to read Windows executables into C# structures.</Description>
     <Authors>alanedwardes</Authors>
     <PackageTags>parsing;minidump;binary;reading;memorydump;debugging</PackageTags>
+    <PackageIconUrl>https://raw.githubusercontent.com/alanedwardes/BinaryMapper/master/logo.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/alanedwardes/BinaryMapper</PackageProjectUrl>
   </PropertyGroup>
 
