--- a/src/BinaryMapper.Windows.Minidump/BinaryMapper.Windows.Minidump.csproj
+++ b/src/BinaryMapper.Windows.Minidump/BinaryMapper.Windows.Minidump.csproj
@@ -2,11 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.3</Version>
+    <Version>0.3.1</Version>
     
     <Description>Provides types to read Windows minidumps into C# structures. Defines MINIDUMP_HEADER and other types from the Windows API.</Description>
     <Authors>alanedwardes</Authors>
     <PackageTags>parsing;binary;reading;executable;dos;pe</PackageTags>
+    <PackageIconUrl>https://raw.githubusercontent.com/alanedwardes/BinaryMapper/master/logo.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/alanedwardes/BinaryMapper</PackageProjectUrl>
   </PropertyGroup>
 
