--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,6 +17,9 @@ before_build:
 after_build:
 - dotnet pack -c Release -o .\..\..\Artifacts
 
+test_script:
+- dotnet test "tests\BinaryMapper.Tests\BinaryMapper.Tests.csproj"
+
 artifacts:
 - path: Artifacts\*.nupkg
 
