--- a/tests/BinaryMapper.Tests/BinaryMapper.Tests.csproj
+++ b/tests/BinaryMapper.Tests/BinaryMapper.Tests.csproj
@@ -13,10 +13,14 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\BinaryMapper.Core\BinaryMapper.Core.csproj" />
     <ProjectReference Include="..\..\src\BinaryMapper.Windows.Executable\BinaryMapper.Windows.Executable.csproj" />
+    <ProjectReference Include="..\..\src\BinaryMapper.Windows.Minidump\BinaryMapper.Windows.Minidump.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <None Update="Files\firefox.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Files\vic-engine-V3398-2020-04-28T20-51-34-473.dmp">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
