Enabled the generation of documentation files
Enabled a checkbox in the project settings that creates the XML documentation for the inline comments that is used to provide the documentation in the assembly.

--- a/src/BinaryMapper.Core/BinaryMapper.Core.csproj
+++ b/src/BinaryMapper.Core/BinaryMapper.Core.csproj
@@ -10,4 +10,8 @@
     <PackageIconUrl>https://raw.githubusercontent.com/alanedwardes/BinaryMapper/master/logo.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/alanedwardes/BinaryMapper</PackageProjectUrl>
   </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>G:\projects\vector\github\BinaryMapper\src\BinaryMapper.Core\BinaryMapper.Core.xml</DocumentationFile>
+  </PropertyGroup>
 </Project>
