--- a/src/BinaryMapper.Windows.Executable/BinaryMapper.Windows.Executable.csproj
+++ b/src/BinaryMapper.Windows.Executable/BinaryMapper.Windows.Executable.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -9,6 +9,10 @@
     <PackageTags>parsing;minidump;binary;reading;memorydump;debugging</PackageTags>
     <PackageIconUrl>https://raw.githubusercontent.com/alanedwardes/BinaryMapper/master/logo.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/alanedwardes/BinaryMapper</PackageProjectUrl>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>G:\projects\vector\github\BinaryMapper\src\BinaryMapper.Windows.Executable\BinaryMapper.Windows.Executable.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
